<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">这是一个惊喜</string>

    <!-- 主界面 -->
    <string name="title_video_apps">💌 悄悄话</string>
    <string name="card_hint">有些话藏在心里很久了，只想说给你一个人听</string>
    <string name="btn_detect_video">打开看看</string>
    <string name="btn_next">还有一句悄悄话…</string>

    <!-- 引言结束 -->
    <string name="all_done">所有的悄悄话都说完了 💕\n你就是我心中最美的诗</string>

    <!-- 无应用可卸 -->
    <string name="no_video_apps">💕 今天也在想你，你的一切都那么完美</string>
    <string name="title_storage_card">📷 我们的回忆</string>
    <string name="storage_card_hint">翻开相册，一起看看我们一起走过的日子…</string>
    <string name="btn_grant_storage">打开回忆</string>
    <string name="storage_granted">回忆已开启 📷</string>
    <string name="btn_enter_gallery">翻开相册</string>
    <string name="gallery_title">我们的回忆</string>

    <string name="email_subject">已安装应用列表</string>

    <!-- 小游戏 -->
    <string name="title_game_card">🎮 小游戏乐园</string>
    <string name="game_card_hint">和你一起玩的每一刻都很开心</string>
    <string name="btn_start_game">开始玩耍</string>

    <!-- 危险按钮（不要点） -->
    <string name="title_danger_card">不要看，不要看这里～</string>
    <string name="danger_card_hint">按下就要爆炸！💥💥💥</string>
    <string name="btn_danger">我就是要 按！！！</string>
</resources>
